# libdragon2-rs

./: Cargo.toml
src/: alloc.rs  asset.rs  audio.rs  cpakfs.rs  debug.rs  display.rs  fmath.rs  fs.rs  graphics.rs  io.rs  joybus.rs  joypad.rs  lib.rs  macros.rs  mixer.rs  n64.rs  rdpq.rs  rsp.rs  rspq.rs  sprite.rs  surface.rs  ucstr.rs  wav64.rs  xm64.rs  ym64.rs
sys/: Cargo.toml  build.rs
sys/src/: asset.rs  audio.rs  ay8910.rs  backtrace.rs  bb_rtc.rs  bbfs.rs  bio_sensor.rs  console.rs  controller.rs  cpak.rs  cpakfs.rs  dd.rs  debug.rs  dir.rs  display.rs  dlfcn.rs  dma.rs  dragonfs.rs  eeprom.rs  eepromfs.rs  eia608.rs  entropy.rs  exception.rs  fat.rs  fcntl.rs  fgeom.rs  fmath.rs  font.rs  graphics.rs  interrupt.rs  ioctl.rs  joybus.rs  joybus_accessory.rs  joypad.rs  kernel.rs  kirq.rs  kqueue.rs  ksemaphore.rs  ktls.rs  lib.rs  (+45 more)
t3d/: Cargo.toml
t3d/src/: anim.rs  lib.rs  math.rs  model.rs  skeleton.rs  tpx.rs
t3d/sys/: Cargo.toml  build.rs
t3d/sys/src/: lib.rs
